parser/src/parser/snapshots/parser__parser__parser__tests__tuple-5.snap
---
source: parser/src/parser/parser.rs
description: "(a,\n)"
---
Module {
    node: Node {
        start: 0,
        end: 5,
    },
    body: [
        ExpressionStatement(
            Name(
                Name {
                    node: Node {
                        start: 1,
                        end: 2,
                    },
                    id: "a",
                },
            ),
        ),
    ],
}
