parser/src/parser/snapshots/parser__parser__parser__tests__while_statement-3.snap
---
source: parser/src/parser/parser.rs
description: "while a:\n        a = 1\nelse:\n        b = 1\n"
---
Module {
    node: Node {
        start: 0,
        end: 43,
    },
    body: [
        WhileStatement(
            While {
                node: Node {
                    start: 0,
                    end: 43,
                },
                test: Name(
                    Name {
                        node: Node {
                            start: 6,
                            end: 7,
                        },
                        id: "a",
                    },
                ),
                body: [
                    AssignStatement(
                        Assign {
                            node: Node {
                                start: 17,
                                end: 22,
                            },
                            targets: [
                                Name(
                                    Name {
                                        node: Node {
                                            start: 17,
                                            end: 18,
                                        },
                                        id: "a",
                                    },
                                ),
                            ],
                            value: Constant(
                                Constant {
                                    node: Node {
                                        start: 21,
                                        end: 22,
                                    },
                                    value: Int(
                                        "1",
                                    ),
                                },
                            ),
                        },
                    ),
                ],
                orelse: [
                    AssignStatement(
                        Assign {
                            node: Node {
                                start: 37,
                                end: 42,
                            },
                            targets: [
                                Name(
                                    Name {
                                        node: Node {
                                            start: 37,
                                            end: 38,
                                        },
                                        id: "b",
                                    },
                                ),
                            ],
                            value: Constant(
                                Constant {
                                    node: Node {
                                        start: 41,
                                        end: 42,
                                    },
                                    value: Int(
                                        "1",
                                    ),
                                },
                            ),
                        },
                    ),
                ],
            },
        ),
    ],
}
